# earthworm-models

./: PGDB_LICENSE.html  README.md  create_biocyc_input.ipynb  get_MetaNetX_annotations.ipynb  preprocess_MetaFlux_SBML.ipynb  pyproject.toml  use_icel_compartments_for_lru.ipynb  use_icel_compartments_for_metabolic_model.ipynb
lumbricus_rubellus/BlastKOALA/: user_ko_definition.txt
lumbricus_rubellus/MetaFlux/: SBML_export.fba
lumbricus_terrestris/BlastKOALA/: user_ko_definition.txt
lumbricus_terrestris/MetaFlux/: SBML_export.fba
