[project]
name = "earthworm-models"
version = "0.1.0"
description = "Metabolic models of the earthworm species Lumbricus rubellus and Lumbricus terrestris"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = ["cobra>=0.26.3", "PythonCyc>=2.0.2"]

[project.urls]
Homepage = "https://github.com/cnapy-org/earthworm-models"
Issues = "https://github.com/cnapy-org/earthworm-models/issues"
